--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.remove-abandoned=true
 spring.datasource.tomcat.validation-query=SELECT 1
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
